@@ -1,6 +1,6 @@
 Package: effects
 Version: 2.3-0
-Date: 2013/10/15
+Date: 2013/10/17
 Title: Effect Displays for Linear, Generalized Linear, Multinomial-Logit, Proportional-Odds Logit Models and Mixed-Effects Models
 Authors@R: c(person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaster.ca"),
 	person("Sanford", "Weisberg", role = "aut", email = "sandy@umn.edu"),
@@ -9,6 +9,8 @@ Authors@R: c(person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaste
     person("Robert", "Andersen", role = "ctb"),
     person("David", "Firth", role = "ctb"),
     person("Steve", "Taylor", role = "ctb"))
+Author:  John Fox and Michael Friendly and Sanford Weisberg
+Maintainer:  John Fox <jfox@mcmaster.ca>, Sanford Weisberg <sandy@umn.edu>, Michael Friendly <friendly@yorku.ca>
 Depends: lattice, grid, colorspace
 Suggests: nlme, lme4, MASS, nnet, poLCA
 LazyLoad: yes
